Replaced old pairings page with Svelte version

--- a/app/views/rounds/index.html.slim
+++ b/app/views/rounds/index.html.slim
@@ -1,95 +1,4 @@
-.col-12
-  - if @tournament.stages.empty?
-    - if policy(@tournament).update?
-      = link_to tournament_stages_path(@tournament), method: :post, class: 'btn btn-success' do
-        => fa_icon 'plus'
-        | Add Swiss stage
-  - else
-    - if @tournament.rounds.empty?
-      p= link_to meeting_tournament_players_path(@tournament), class: 'btn btn-primary' do
-        => fa_icon 'list-ul'
-        | Player meeting
-    - else
-      - if policy(@tournament).update?
-        #toggle_reported.btn.btn-primary.mr-2
-          => fa_icon 'eye-slash'
-          | Show/hide reported pairings
-      #toggle_identities.btn.btn-primary
-        => fa_icon 'eye-slash'
-        | Show/hide identities
-      =<> link_to view_pairings_tournament_rounds_path(@tournament), class: 'btn btn-primary' do
-        => fa_icon 'users'
-        | See player pairings view
-      button.btn.btn-primary.mr-2 data-toggle="modal" data-target="#faq" type="button"
-        => fa_icon 'question'
-        | FAQ
-      .modal.fade id="faq" tabindex="-1" role="dialog" aria-hidden="true"
-        .modal-dialog.modal-dialog-centered.mh-80 role="document"
-          .modal-content
-            .modal-header
-              h5.modal-title FAQ
-              button.close type="button" data-dismiss="modal" aria-label="Close"
-                span aria-hidden="true" &times;
-            .modal-body
-              => render 'self_reporting_faq'
-      p
-      .reported_hidden_message.alert.alert-info Reported scores are currently hidden on this page. This will not affect other users viewing this page.
-    - if @warning
-      p.alert.alert-warning = @warning
+#pairings_anchor.col-12 data-tournament="#{@tournament.id}"
 
-    - if policy(@tournament).update?
-      p
-        - if @tournament.registration_open?
-          => link_to close_registration_tournament_path(@tournament), method: :patch, class: 'btn btn-info' do
-            => fa_icon 'lock'
-            | Close registration
-        - elsif @tournament.self_registration? and @tournament.rounds.empty?
-          => link_to open_registration_tournament_path(@tournament), method: :patch, class: 'btn btn-secondary' do
-            => fa_icon 'folder-open'
-            | Open registration
-          - if @tournament.locked_players.count > 0
-            => link_to unlock_player_registrations_tournament_path(@tournament), method: :patch, class: 'btn btn-secondary' do
-              => fa_icon 'unlock'
-              | Unlock all players
-          - if @tournament.unlocked_players.count > 0
-            => link_to lock_player_registrations_tournament_path(@tournament), method: :patch, class: 'btn btn-info' do
-              => fa_icon 'lock'
-              | Lock all players
-        - if @tournament.rounds.all?(&:completed?)
-          => link_to tournament_rounds_path(@tournament), method: :post, class: 'btn btn-success',
-                  data: { confirm: @tournament.registration_unlocked? ? 'Registration is still open or some players are unlocked, pair new round anyway?' : nil } do
-            => fa_icon 'plus'
-            | Pair new round!
-        - else
-          a.btn.btn-secondary.mr-3.disabled
-            => fa_icon 'plus'
-            | Pair new round!
-          | All rounds must be flagged complete before you can add a new round
-    
-    = render @stages
-
-    - if policy(@tournament).update?
-        - unless @stages.last.elimination?
-          p
-            => link_to cut_tournament_path(@tournament, number: 3, elimination_type: 'single'), method: :post, class: 'btn btn-success' do
-              => fa_icon 'scissors'
-              | Single-Elimination Top 3
-            => link_to cut_tournament_path(@tournament, number: 4, elimination_type: 'single'), method: :post, class: 'btn btn-success' do
-              => fa_icon 'scissors'
-              | Single-Elimination Top 4
-            => link_to cut_tournament_path(@tournament, number: 8, elimination_type: 'single'), method: :post, class: 'btn btn-success' do
-              => fa_icon 'scissors'
-              | Single-Elimination Top 8
-            => link_to cut_tournament_path(@tournament, number: 16, elimination_type: 'single'), method: :post, class: 'btn btn-success' do
-              => fa_icon 'scissors'
-              | Single-Elimination Top 16
-          p
-            => link_to cut_tournament_path(@tournament, number: 4), method: :post, class: 'btn btn-success' do
-              => fa_icon 'scissors'
-              | Double-Elimination Top 4
-            => link_to cut_tournament_path(@tournament, number: 8), method: :post, class: 'btn btn-success' do
-              => fa_icon 'scissors'
-              | Double-Elimination Top 8
-            => link_to cut_tournament_path(@tournament, number: 16), method: :post, class: 'btn btn-success' do
-              => fa_icon 'scissors'
-              | Double-Elimination Top 16
+= content_for :head do
+  = vite_typescript_tag 'pairings', 'data-turbolinks-track': 'reload'
